fixed build view stats alignment

--- a/app/org/org.component.css
+++ b/app/org/org.component.css
@@ -1,214 +1,221 @@
 .node {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .node circle {
-  fill: #fff;
-  stroke: steelblue;
-  stroke-width: 1.5px;
+    fill: #fff;
+    stroke: steelblue;
+    stroke-width: 1.5px;
 }
 
 .node text {
-  font: 10px sans-serif;
+    font: 10px sans-serif;
 }
 
 .link {
-  fill: none;
-  stroke: #ccc;
-  stroke-width: 1.5px;
+    fill: none;
+    stroke: #ccc;
+    stroke-width: 1.5px;
 }
 
 .chart {
-  background: #eee;
-  padding: 3px;
+    background: #eee;
+    padding: 3px;
 }
 
 .chart div {
-  width: 0;
-  transition: all 1s ease-out;
-  -moz-transition: all 1s ease-out;
-  -webkit-transition: all 1s ease-out;
+    width: 0;
+    transition: all 1s ease-out;
+    -moz-transition: all 1s ease-out;
+    -webkit-transition: all 1s ease-out;
 }
 
 .chart div {
-  font: 10px sans-serif;
-  background-color: steelblue;
-  text-align: right;
-  padding: 3px;
-  margin: 5px;
-  color: white;
-  box-shadow: 2px 2px 2px #666;
+    font: 10px sans-serif;
+    background-color: steelblue;
+    text-align: right;
+    padding: 3px;
+    margin: 5px;
+    color: white;
+    box-shadow: 2px 2px 2px #666;
 }
 
 .title {
-  font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .person {
-  cursor: pointer;
-  color: #222222;
+    cursor: pointer;
+    color: #222222;
 }
 
 .title {
-  cursor: pointer;
-  color: #222222;
-  font-style: italic;
+    cursor: pointer;
+    color: #222222;
+    font-style: italic;
 }
 
 nav {
-  background-color: #fff;
+    background-color: #fff;
 }
 
-nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
-  height: 55px;
-  line-height: 55px;
+nav,
+nav .nav-wrapper i,
+nav a.button-collapse,
+nav a.button-collapse i {
+    height: 55px;
+    line-height: 55px;
 }
 
 nav .brand-logo {
-  padding: 0 20px;
-  color: #607d8b;
+    padding: 0 20px;
+    color: #607d8b;
 }
 
 nav ul a {
-  color: #607d8b;
+    color: #607d8b;
 }
 
-nav ul a i.right, nav ul a i.left {
-  margin: 0 5px;
+nav ul a i.right,
+nav ul a i.left {
+    margin: 0 5px;
 }
 
 #userDropdown {
-  top: 55px !important;
+    top: 55px !important;
 }
 
 #userDropdown .collection-item.avatar {
-  min-height: 65px
+    min-height: 65px
 }
 
 #userDropdown .collection-item.avatar img {
-  position: absolute;
-  width: 42px;
-  height: 42px;
-  overflow: hidden;
-  left: 15px;
-  display: inline-block;
-  vertical-align: middle;
+    position: absolute;
+    width: 42px;
+    height: 42px;
+    overflow: hidden;
+    left: 15px;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 #userDropdown .collection-item.avatar .title {
-  padding: 0;
+    padding: 0;
 }
 
 .caption {
-  color: #757575;
-  font-size: 11px;
-  white-space: nowrap;
-  z-index: 1;
+    color: #757575;
+    font-size: 11px;
+    white-space: nowrap;
+    z-index: 1;
 }
 
 .dropdown-content li>a>i {
-  height: inherit !important;
-  line-height: inherit !important;
+    height: inherit !important;
+    line-height: inherit !important;
+}
+
+.auth-panel {
+    height: 60px;
 }
 
 .auth-panel button {
-  float: right;
-  margin-left: 0.7em;
+    float: right;
+    margin-left: 0.7em;
 }
 
 .person:hover {
-  color: #029BFF;
+    color: #029BFF;
 }
 
 .main-canvas {
-  width: 100%;
-  overflow-x: auto;
-  padding-top: 55px;
+    width: 100%;
+    overflow-x: auto;
 }
 
 .main-canvas h1 {
-  margin-top: 0;
+    margin-top: 0;
 }
 
 .modes-wrap {
-  min-width: 25px;
-  position: fixed;
-  top: 50px;
-  left: 30px
+    min-width: 25px;
+    position: fixed;
+    top: 50px;
+    left: 30px
 }
 
-.fixed{
-  position: fixed;
+.fixed {
+    position: fixed;
 }
 
 .modes-wrap li:first-child {
-  margin: 0 5px 5px 0;
+    margin: 0 5px 5px 0;
 }
 
 .modes-wrap li {
-  width: 50px;
-  height: 50px;
-  object-fit: contain;
-  background-repeat: no-repeat;
-  cursor: pointer;
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
 }
 
 .modes-wrap li.inactive {
-  cursor: default;
+    cursor: default;
 }
 
 .modes-wrap li.nav-build {
-  background-image: url("app/images/nav-build.png");
+    background-image: url("app/images/nav-build.png");
 }
 
 .modes-wrap li.nav-build.active {
-  background-image: url("app/images/nav-build-active.png");
+    background-image: url("app/images/nav-build-active.png");
 }
 
 .modes-wrap li.nav-explore {
-  background-image: url("app/images/nav-explore.png");
+    background-image: url("app/images/nav-explore.png");
 }
 
 .modes-wrap li.nav-explore.active {
-  background-image: url("app/images/nav-explore-active.png");
+    background-image: url("app/images/nav-explore-active.png");
 }
 
 .modes-wrap li.nav-report {
-  background-image: url("app/images/nav-report.png");
+    background-image: url("app/images/nav-report.png");
 }
 
 .modes-wrap li.nav-report.active {
-  background-image: url("app/images/nav-report-active.png");
+    background-image: url("app/images/nav-report-active.png");
 }
 
 .modes-wrap li > a {
-  width: 28px;
-  line-height: 43px;
-  font-family: HelveticaNeue;
-  font-size: 12px;
-  font-weight: 400;
-  color: #607d8b;
-  margin: 55px;
+    width: 28px;
+    line-height: 43px;
+    font-family: HelveticaNeue;
+    font-size: 12px;
+    font-weight: 400;
+    color: #607d8b;
+    margin: 55px;
 }
 
 .modes-wrap li.inactive > a {
-  color: #cfd8dc;
+    color: #cfd8dc;
 }
 
 @media only screen and (max-width:992px) {
-  nav .brand-logo {
-    left: 0%;
-    -webkit-transform: translateX(0%);
-    transform: translateX(0%);
-  }
+    nav .brand-logo {
+        left: 0%;
+        -webkit-transform: translateX(0%);
+        transform: translateX(0%);
+    }
 }
 
 @media only screen and (max-width:600px) {
-  .main-canvas {
-    height: auto;
-  }
-  .modes-wrap {
-    top: 65px;
-    left: 10px;
-  }
+    .main-canvas {
+        height: auto;
+    }
+    .modes-wrap {
+        top: 65px;
+        left: 10px;
+    }
 }
